# tensorring

./: .data_out3.swp  .mems_data.swp  .tensor_run.py.swp  ABCDE-433  CMakeLists.txt  Data_1  Data_2  Data_3  Data_4  Data_5  Data_6  Data_7  Data_8  change  change2  change2.cpp  changedata.cpp  data.py  data_1.txt  data_2.txt  data_3.txt  data_out  data_out2  data_out3  dome.py  jy901_serial.kdev4  mems_data  recurrent_network.py  ring.tar.bz2  serial-read.py  tensor_run.py
data_io/include/: ui.h
data_io/src/: Serial.cpp  ui.cpp
include/: Serial.h  ui.h
src/: JY901.c  Serial.cpp  main.cpp  ui.cpp
